# NocLense

./: .cursorrules  .gitignore  .vercelignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLOUDFLARE_PAGES_FIX.md  CNC_SITE_NAMES_IMPLEMENTATION_DRAFT.md  HANDOFF.md  ISSUES_REVIEW.md  LARGE_FILE_SOLUTIONS.md  LLM_INTEGRATION_FILE_MANIFEST.md  LLM_INTEGRATION_QUICK_REFERENCE.md  LLM_INTEGRATION_SUMMARY.md  MEMORY_ANALYSIS.md  PAID_HOSTING_OPTIONS.md  README.md  REFACTOR_CHANGELOG.md  USAGE_GUIDE.md  WEB_DEPLOYMENT.md  eslint.config.js  index.html  package-lock.json  package.json  sample_data.txt  tsconfig.app.json  tsconfig.node.json  vercel.json  vite.config.ts  wrangler.toml
.claude/: launch.json  settings.json
.cloudflare/: deploy.sh
.cursor/: argv.json
.vercel/: project.json
api/: ai-proxy.ts  confluence-proxy.ts  datadog-proxy.ts  jira-proxy.ts  zendesk-proxy.ts
chatgpt-prototype/: README.md  package.json
docs/: AGENTS.md  AI_ONBOARDING_EXAMPLES.md  CHANGELOG.md  DEVELOPER_HANDOFF.md  HANDOFF_enrique-3-30.md  IMPLEMENTATION_PLAN_3-30.md  IMPLEMENTATION_PLAN_4-02.md  LLM_INTEGRATION_TESTING_GUIDE.md  QA_CHECKLIST_2025-03-01.md  USAGE_GUIDE.md
electron/: main.js  preload.js
public/: service-mappings.json
review/: SKILL.md
scripts/: perf-cli.ts  perf-harness-snippet.js  perf-harness.ts
server/: .npmrc  Dockerfile  package-lock.json  package.json  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: crash_reporting.rs  file_stream.rs  keyring.rs  mod.rs
(+530 files in other folders)
